[tmux] Fix SSH_ROOT detection

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -102,7 +102,7 @@ set -g @prefix_highlight_prefix_prompt 'TMUX'
 set -g @prefix_highlight_show_copy_mode 'on'
 if-shell '[[ "$OS" != macos ]]' \
   'set -g @plugin "tmux-plugins/tmux-yank"'
-if-shell '[[ -z "$SSH_CONNECTION" ]] || [[ -n "$SSH_ROOT" ]]' \
+if-shell '[ -z "$SSH_CONNECTION" ] || [ -n "$SSH_ROOT" ]' \
   '\
   set -g status-position bottom ;\
   set -g status-right "#{prefix_highlight} #U@#H " ;\
