[emacs,git] Config changes for forge package

--- a/git/.gitconfig.local.example
+++ b/git/.gitconfig.local.example
@@ -5,5 +5,7 @@
   email = USER_EMAIL
 [credential]
   helper = CREDENTIAL_HELPER
+[github]
+	user = USER_NAME
 # [url "git@github.com:"]
 #   pushInsteadOf = https://github.com/
