[tmux] Update styling configuration

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -69,7 +69,7 @@ set -g status-left ' '
 set -g status-right '#{prefix_highlight} '
 set -g window-status-format ' #I '
 set -g window-status-current-format '[#I]'
-set -g status-attr bold
+set -g status-style bold
 set -g status-fg default
 set -g status-bg default
 set -g message-style reverse
